--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "."
-  command = ""
+  command = "echo 'Static site - no build required'"
 
 [build.environment]
   NODE_VERSION = "18"
